--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
             <div class="footer-pad">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
-                    <li><a href="{% url 'email' %}">Contct Us</a></li>
+                    <li><a href="{% url 'email' %}">Contact Us </a></li>
                 </ul>
             </div>
         </div>
