--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,7 +63,7 @@ a:link {
 
 /*-------------------------------------------- images */
 
-.img{
+/* .img{
   width: 100%;
   height: 50%;
   background-image: url('../../static/images/tech.jpg');
@@ -71,7 +71,7 @@ a:link {
   background-position: center;
   position: relative;
   margin: 0 auto 40px;
-}
+} */
 .background-img {
   width: 100%;
   height: 80%;
